deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: realworld
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: docker.io/newjett0617/realworld:backend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: realworld
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: docker.io/newjett0617/realworld:frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
